Page MenuHome GnuPG

UI says “Secret key is available.” in gpg when it is not
Closed, ResolvedPublic

Description

Per https://dev.gnupg.org/T2289 - I was told to file a new issue if this is still present in 2.2.

gpg --edit-key 2FFA7695
gpg (GnuPG/MacGPG2) 2.2.0; Copyright (C) 2017 Free Software Foundation, Inc.
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.

Secret key is available.

pub  rsa4096/C0C076132FFA7695
...

The key in question has the master key stripped and subkeys on a Yubikey.
This could confuse users when they see: “Secret key is available.”

Details